--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^11.1.1",
     "bootstrap": "^5.3.2",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
