--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ng-select/ng-select": "^11.1.1",
+    "@types/d3-scale": "^4.0.4",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "ng2-charts": "^5.0.3",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
